Ongoing Puppet Release Decisions Work

--- a/localisation/PB_Occupations_l_english.yml
+++ b/localisation/PB_Occupations_l_english.yml
@@ -65,6 +65,8 @@
   PB_Occupation_Thrace:0 "Occupation of West Thrace"
   PB_Occupation_Turkey:0 "Occupation of Turkey"
 
+  PB_Occupation_Kurdistan:0 "Occupation of Kurdistan"
+
   ##########################
   # EVENTS
   ##########################
@@ -301,6 +303,10 @@
   occupation.50.t:0 "The Occupation of Ukraine"
   occupation.50.d:0 "With Ukraine fully under our control, we must decide what to do with the region."
   occupation.50.a:0 "Establish an independent Ukrainian state"
+
+  occupation.51.t:0 "The Occupation of Kurdistan"
+  occupation.51.d:0 "With Kurdistan fully under our control, we must decide what to do with the region."
+  occupation.51.a:0 "Establish an independent Kurdish state"
 
   ##########################
   # COSMETIC TAGS
@@ -1455,3 +1461,28 @@
  TUR_Occupied_Republic_ds_ADJ:0 "Turkish"
  TUR_Occupied_Republic_cn_ADJ:0 "Turkish"
  TUR_Occupied_Republic_an_ADJ:0 "Turkish"
+
+ KRD_Occupied_Republic_ni:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_ni_DEF:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_ds:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_ds_DEF:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_rc:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_rc_DEF:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_an:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_an_DEF:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_cn:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_cn_DEF:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_lb:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_lb_DEF:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_ss:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_ss_DEF:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_jc:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_jc_DEF:0 "Kurdish Confederation"
+ KRD_Occupied_Republic_ni_ADJ:0 "Kurdish"
+ KRD_Occupied_Republic_rc_ADJ:0 "Kurdish"
+ KRD_Occupied_Republic_lb_ADJ:0 "Kurdish"
+ KRD_Occupied_Republic_ss_ADJ:0 "Kurdish"
+ KRD_Occupied_Republic_jc_ADJ:0 "Kurdish"
+ KRD_Occupied_Republic_ds_ADJ:0 "Kurdish"
+ KRD_Occupied_Republic_cn_ADJ:0 "Kurdish"
+ KRD_Occupied_Republic_an_ADJ:0 "Kurdish"
