--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -2501,21 +2501,21 @@
  KAL_cn_ADJ:0 "Indonesian"
  KAL_an_ADJ:0 "Indonesian"
 
- OMA_ni:0 "Oman"
- OMA_ni_DEF:0 "Oman"
- OMA_rc:0 "Oman"
- OMA_rc_DEF:0 "Oman"
- OMA_lb:0 "Oman"
- OMA_lb_DEF:0 "Oman"
- OMA_ss:0 "Oman"
- OMA_ss_DEF:0 "Oman"
- OMA_jc:0 "Oman"
- OMA_jc_DEF:0 "Oman"
+ OMA_ni:0 "Muscat and Oman"
+ OMA_ni_DEF:0 "Muscat and Oman"
+ OMA_rc:0 "Muscat and Oman"
+ OMA_rc_DEF:0 "Muscat and Oman"
+ OMA_lb:0 "Muscat and Oman"
+ OMA_lb_DEF:0 "Muscat and Oman"
+ OMA_ss:0 "Muscat and Oman"
+ OMA_ss_DEF:0 "Muscat and Oman"
+ OMA_jc:0 "Muscat and Oman"
+ OMA_jc_DEF:0 "Muscat and Oman"
  OMA_an:0 "Oman "
- OMA_an_DEF:0 "Oman"
- OMA_ds:0 "Oman"
- OMA_ds_DEF:0 "Oman"
- OMA_cn:0 "Oman"
+ OMA_an_DEF:0 "Muscat and Oman"
+ OMA_ds:0 "Muscat and Oman"
+ OMA_ds_DEF:0 "Muscat and Oman"
+ OMA_cn:0 "Muscat and Oman"
  OMA_cn_DEF:0 "Omani"
  OMA_ni_ADJ:0 "Omani"
  OMA_rc_ADJ:0 "Omani"
@@ -7243,6 +7243,156 @@ SAN_jc:0 "Sanghli State"
  PSK_ds_ADJ:0 "Polish"
  PSK_cn_ADJ:0 "Polish"
  PSK_an_ADJ:0 "Polish"
+
+ ALW_ni:0 "Alawite State"
+ ALW_ni_DEF:0 "Alawite State"
+ ALW_ds:0 "Alawite State"
+ ALW_ds_DEF:0 "Alawite State"
+ ALW_rc:0 "Alawite State"
+ ALW_rc_DEF:0 "Alawite State"
+ ALW_an:0 "Alawite State"
+ ALW_an_DEF:0 "Alawite State"
+ ALW_cn:0 "Alawite State"
+ ALW_cn_DEF:0 "Alawite State"
+ ALW_lb:0 "Alawite State"
+ ALW_lb_DEF:0 "Alawite State"
+ ALW_ss:0 "Alawite State"
+ ALW_ss_DEF:0 "Alawite State"
+ ALW_jc:0 "Alawite State"
+ ALW_jc_DEF:0 "Alawite State"
+ ALW_ni_ADJ:0 "Alawite"
+ ALW_rc_ADJ:0 "Alawite"
+ ALW_lb_ADJ:0 "Alawite"
+ ALW_ss_ADJ:0 "Alawite"
+ ALW_jc_ADJ:0 "Alawite"
+ ALW_ds_ADJ:0 "Alawite"
+ ALW_cn_ADJ:0 "Alawite"
+ ALW_an_ADJ:0 "Alawite"
+
+ DRZ_ni:0 "Jabal Druze"
+ DRZ_ni_DEF:0 "Jabal Druze"
+ DRZ_ds:0 "Jabal Druze"
+ DRZ_ds_DEF:0 "Jabal Druze"
+ DRZ_rc:0 "Jabal Druze"
+ DRZ_rc_DEF:0 "Jabal Druze"
+ DRZ_an:0 "Jabal Druze"
+ DRZ_an_DEF:0 "Jabal Druze"
+ DRZ_cn:0 "Jabal Druze"
+ DRZ_cn_DEF:0 "Jabal Druze"
+ DRZ_lb:0 "Jabal Druze"
+ DRZ_lb_DEF:0 "Jabal Druze"
+ DRZ_ss:0 "Jabal Druze"
+ DRZ_ss_DEF:0 "Jabal Druze"
+ DRZ_jc:0 "Jabal Druze"
+ DRZ_jc_DEF:0 "Jabal Druze"
+ DRZ_ni_ADJ:0 "Druze"
+ DRZ_rc_ADJ:0 "Druze"
+ DRZ_lb_ADJ:0 "Druze"
+ DRZ_ss_ADJ:0 "Druze"
+ DRZ_jc_ADJ:0 "Druze"
+ DRZ_ds_ADJ:0 "Druze"
+ DRZ_cn_ADJ:0 "Druze"
+ DRZ_an_ADJ:0 "Druze"
+
+ AZR_ni:0 "Azerbijan"
+ AZR_ni_DEF:0 "Azerbijan"
+ AZR_ds:0 "Azerbijan"
+ AZR_ds_DEF:0 "Azerbijan"
+ AZR_rc:0 "Azerbijan"
+ AZR_rc_DEF:0 "Azerbijan"
+ AZR_an:0 "Azerbijan"
+ AZR_an_DEF:0 "Azerbijan"
+ AZR_cn:0 "Azerbijan"
+ AZR_cn_DEF:0 "Azerbijan"
+ AZR_lb:0 "Azerbijan"
+ AZR_lb_DEF:0 "Azerbijan"
+ AZR_ss:0 "Azerbijan"
+ AZR_ss_DEF:0 "Azerbijan"
+ AZR_jc:0 "Azerbijan"
+ AZR_jc_DEF:0 "Azerbijan"
+ AZR_ni_ADJ:0 "Azeri"
+ AZR_rc_ADJ:0 "Azeri"
+ AZR_lb_ADJ:0 "Azeri"
+ AZR_ss_ADJ:0 "Azeri"
+ AZR_jc_ADJ:0 "Azeri"
+ AZR_ds_ADJ:0 "Azeri"
+ AZR_cn_ADJ:0 "Azeri"
+ AZR_an_ADJ:0 "Azeri"
+
+ LEB_ni:0 "Emirate of Mount Lebanon"
+ LEB_ni_DEF:0 "Emirate of Mount Lebanon"
+ LEB_ds:0 "Emirate of Mount Lebanon"
+ LEB_ds_DEF:0 "Emirate of Mount Lebanon"
+ LEB_rc:0 "Emirate of Mount Lebanon"
+ LEB_rc_DEF:0 "Emirate of Mount Lebanon"
+ LEB_an:0 "Emirate of Mount Lebanon"
+ LEB_an_DEF:0 "Emirate of Mount Lebanon"
+ LEB_cn:0 "Emirate of Mount Lebanon"
+ LEB_cn_DEF:0 "Emirate of Mount Lebanon"
+ LEB_lb:0 "Emirate of Mount Lebanon"
+ LEB_lb_DEF:0 "Emirate of Mount Lebanon"
+ LEB_ss:0 "Emirate of Mount Lebanon"
+ LEB_ss_DEF:0 "Emirate of Mount Lebanon"
+ LEB_jc:0 "Emirate of Mount Lebanon"
+ LEB_jc_DEF:0 "Emirate of Mount Lebanon"
+ LEB_ni_ADJ:0 "Lebanese"
+ LEB_rc_ADJ:0 "Lebanese"
+ LEB_lb_ADJ:0 "Lebanese"
+ LEB_ss_ADJ:0 "Lebanese"
+ LEB_jc_ADJ:0 "Lebanese"
+ LEB_ds_ADJ:0 "Lebanese"
+ LEB_cn_ADJ:0 "Lebanese"
+ LEB_an_ADJ:0 "Lebanese"
+
+ UAE_ni:0 "Trucial Sheikhdoms"
+ UAE_ni_DEF:0 "Trucial Sheikhdoms"
+ UAE_ds:0 "Trucial Sheikhdoms"
+ UAE_ds_DEF:0 "Trucial Sheikhdoms"
+ UAE_rc:0 "Trucial Sheikhdoms"
+ UAE_rc_DEF:0 "Trucial Sheikhdoms"
+ UAE_an:0 "Trucial Sheikhdoms"
+ UAE_an_DEF:0 "Trucial Sheikhdoms"
+ UAE_cn:0 "Trucial Sheikhdoms"
+ UAE_cn_DEF:0 "Trucial Sheikhdoms"
+ UAE_lb:0 "Trucial Sheikhdoms"
+ UAE_lb_DEF:0 "Trucial Sheikhdoms"
+ UAE_ss:0 "Trucial Sheikhdoms"
+ UAE_ss_DEF:0 "Trucial Sheikhdoms"
+ UAE_jc:0 "Trucial Sheikhdoms"
+ UAE_jc_DEF:0 "Trucial Sheikhdoms"
+ UAE_ni_ADJ:0 "Trucial"
+ UAE_rc_ADJ:0 "Trucial"
+ UAE_lb_ADJ:0 "Trucial"
+ UAE_ss_ADJ:0 "Trucial"
+ UAE_jc_ADJ:0 "Trucial"
+ UAE_ds_ADJ:0 "Trucial"
+ UAE_cn_ADJ:0 "Trucial"
+ UAE_an_ADJ:0 "Trucial"
+
+ KUW_ni:0 "Sheikhdom of Kuwait"
+ KUW_ni_DEF:0 "Sheikhdom of Kuwait"
+ KUW_ds:0 "Sheikhdom of Kuwait"
+ KUW_ds_DEF:0 "Sheikhdom of Kuwait"
+ KUW_rc:0 "Sheikhdom of Kuwait"
+ KUW_rc_DEF:0 "Sheikhdom of Kuwait"
+ KUW_an:0 "Sheikhdom of Kuwait"
+ KUW_an_DEF:0 "Sheikhdom of Kuwait"
+ KUW_cn:0 "Sheikhdom of Kuwait"
+ KUW_cn_DEF:0 "Sheikhdom of Kuwait"
+ KUW_lb:0 "Sheikhdom of Kuwait"
+ KUW_lb_DEF:0 "Sheikhdom of Kuwait"
+ KUW_ss:0 "Sheikhdom of Kuwait"
+ KUW_ss_DEF:0 "Sheikhdom of Kuwait"
+ KUW_jc:0 "Sheikhdom of Kuwait"
+ KUW_jc_DEF:0 "Sheikhdom of Kuwait"
+ KUW_ni_ADJ:0 "Kuwaiti"
+ KUW_rc_ADJ:0 "Kuwaiti"
+ KUW_lb_ADJ:0 "Kuwaiti"
+ KUW_ss_ADJ:0 "Kuwaiti"
+ KUW_jc_ADJ:0 "Kuwaiti"
+ KUW_ds_ADJ:0 "Kuwaiti"
+ KUW_cn_ADJ:0 "Kuwaiti"
+ KUW_an_ADJ:0 "Kuwaiti"
 
 ###################################
 # TEMPLATE
