--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -7394,6 +7394,31 @@ SAN_jc:0 "Sanghli State"
  KUW_cn_ADJ:0 "Kuwaiti"
  KUW_an_ADJ:0 "Kuwaiti"
 
+ SAU_ni:0 "Kingdom of Arabia"
+ SAU_ni_DEF:0 "Kingdom of Arabia"
+ SAU_ds:0 "Kingdom of Arabia"
+ SAU_ds_DEF:0 "Kingdom of Arabia"
+ SAU_rc:0 "Kingdom of Arabia"
+ SAU_rc_DEF:0 "Kingdom of Arabia"
+ SAU_an:0 "Kingdom of Arabia"
+ SAU_an_DEF:0 "Kingdom of Arabia"
+ SAU_cn:0 "Kingdom of Arabia"
+ SAU_cn_DEF:0 "Kingdom of Arabia"
+ SAU_lb:0 "Kingdom of Arabia"
+ SAU_lb_DEF:0 "Kingdom of Arabia"
+ SAU_ss:0 "Kingdom of Arabia"
+ SAU_ss_DEF:0 "Kingdom of Arabia"
+ SAU_jc:0 "Kingdom of Arabia"
+ SAU_jc_DEF:0 "Kingdom of Arabia"
+ SAU_ni_ADJ:0 "Arab"
+ SAU_rc_ADJ:0 "Arab"
+ SAU_lb_ADJ:0 "Arab"
+ SAU_ss_ADJ:0 "Arab"
+ SAU_jc_ADJ:0 "Arab"
+ SAU_ds_ADJ:0 "Arab"
+ SAU_cn_ADJ:0 "Arab"
+ SAU_an_ADJ:0 "Arab"
+
 ###################################
 # TEMPLATE
 ###################################
