--- a/localisation/PB_Turkey_l_english.yml
+++ b/localisation/PB_Turkey_l_english.yml
@@ -72,6 +72,8 @@
   PB_TUR_istanbul_riots:0 "The Istanbul Riots"
   PB_TUR_Turkish_Civil_War:0 "The Turkish Civil War"
   PB_TUR_Turkish_Civil_War_Recovery:0 "Recovering from the Civil War"
+  TUR_five_year_plan_preperation_idea:0 "Five Year Plan Prepeation"
+  TUR_five_year_plan_idea:0 "The Turkish Five Year Plan"
 
   ##########################
   # FOCUSES
@@ -103,6 +105,7 @@
   TUR_encourge_rapprochement:0 "Encourge Rapprochement..."
   TUR_with_golden_dagger:0 "With A Golden Dagger"
   TUR_calmer_instanbul:0 "A Calmer Instanbul"
+  TUR_look_forward:0 "Look Forward"
   ##########################
   # EVENTS
   ##########################
@@ -119,6 +122,11 @@
   turkey_inital.5.b:0 "Only a Grand Statergy will keep our men safe."
   turkey_inital.5.c:0 "We can only overwhelm the enemy with numbers."
   turkey_inital.5.e:0 "Metal and blood will keep us going."
+  turkey_inital.6.t:0 "The First Five Year Plan"
+  turkey_inital.6.a:0 "Soon all will live in utopia."
+  turkey_inital.7.t:0 "The Istanbul Situation"
+  turkey_inital.7.a:0 "Call in the Military"
+  turkey_inital.7.b:0 "Prepare a peaceful solution"
   turkey.1.t:0 "The Death of Izzet Pasha"
   turkey.1.d:0 "Ahmed Izzet Pasha, the dictator of the Ottoman Empire and head of the military junta since 1925, was found dead in his office this morning. Pasha's legacy is a controversial one, with his choice to overthrow the civilian government eight years ago has been both supported and criticized. The Pasha Junta's decision to seek terms with the United Arab Emirates marked the official end of the Ottoman Empire as the hegemony of the Middle East. For many, the collapse of Ottoman rule has been a near constant downward spiral only exacerbated by the end of what tepid democracy the Empire had.\n\nWith Pasha's death, the last tenuous thread holding the Empire together has been cut. What would be an unremarkable state funeral under normal cirucumstances has become a moment of genuine grief and uncertainty amongst the populace. Reports have already begun to reach the Sublime Porte of Jacobin riots on the coast, while Armenian and Kurdish partisans have begun organizing the inevitable breakdown of civil authority. The military has thus far remained silent, but this has engendered even more concern as it is widely believed the junta will make a move to retain power at any cost."
   turkey.1.a:0 "The Empire trembles..."
@@ -171,7 +179,8 @@
   # TOOLTIPS
   ##########################
   TUR_commence_slump_stuff:0 "§YDecsions will be unlocked that will allow us to respond to the economic crisis.§!"
-  TUR_secure_the_borders_tt:0 "§YBunkers will be constructed all around our borders.§!"
+  TUR_secure_the_borders_tt:0 "§YBunkers will be constructed at key points on our borders.§!"
+  TUR_secure_the_interior_tt:0 "§YBunkers will be constructed at key points all around the nation.§!"
   OTT_Turkish_Civil_War_tooltip:0 "§YYou will remain as the Ottoman Empire§!\n\n"
   NTR_Turkish_Civil_War_tooltip:0 "§YYou will switch to Nationalist Turkey§!\n\n"
   RTR_Turkish_Civil_War_tooltip:0 "§YYou will switch to Revolutionary Turkey§!\n\n"
