More Prussia focus tree stuff

--- a/localisation/PB_Prussia_l_english.yml
+++ b/localisation/PB_Prussia_l_english.yml
@@ -274,10 +274,25 @@
   PRS_purge_the_militarists:0 "Purge The Militarists"
   PRS_total_control:0 "Total Control"
   PRS_replace_the_old_blood:0 "Replace The Old Blood"
-  PRS_listen_to_ludendorff:0 "Listen To Ludendorff"
-  PRS_listen_to_mackensen:0 "Listen To Mackensen"
-  PRS_listen_to_rundstedt:0 "Listen To Rundstedt"
-
+  PRS_revenge:0 "Strength"
+  PRS_encourage_militancy:0 "Encourage Militancy"
+  PRS_defend_the_borders:0 "Defend The Borders"
+  PRS_no_longer_slaves:0 "Slaves No More" 
+  PRS_compensate_the_giants:0 "Compensate The Giants"
+  PRS_the_price_for_freedom:0 "The Price For Freedom"
+  PRS_state:0 "State"
+  PRS_a_modern_revolution:0 "A Modern Revolution"
+  PRS_breed_or_die:0 "Breed Or Die"
+  PRS_prepare_for_the_inevitable:0 "Prepare For The Inevitable"
+  PRS_arm_our_warriors:0 "Arm Our Warriors"
+  PRS_send_in_the_zombies:0 "Send In The Zombies"
+  PRS_death_squads:0 "Death Squads"
+  PRS_the_new_prussian_women:0 "The New Prussian Women"
+  PRS_promote_nationalism:0 "Promote Nationalism"
+  PRS_the_new_generation:0 "The New Generation"
+  PRS_dreams_of_the_past:0 "Dreams Of The Past"
+  PRS_for_your_children:0 "For Your Children"
+  PRS_family:0 "Family"
 
   ##########################
   # Ministers/Generals/Tech Teams
