--- a/localisation/PB_Government_l_english.yml
+++ b/localisation/PB_Government_l_english.yml
@@ -27,6 +27,7 @@ PB_NI_French_Revanchism:0 "French Revanchism"
 PB_NI_Japanese_Militarism:0 "Japanese Militarism"
 PB_NI_American_Idealism:0 "American Idealism"
 PB_NI_Chinese_Resilience:0 "Chinese Resilience"
+PB_Prussian_Fatalism:0 "Prussian Fatalism"
 
 policies:0 "Domestic Policy"
 voting_laws:0 "Voting Laws"
