--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -24,7 +24,7 @@
  VICTORY_POINTS_6364:0 "Aarhus"
  VICTORY_POINTS_3544:0 "Warsaw"
  VICTORY_POINTS_9427:0 "Krakow"
- VICTORY_POINTS_362:0 "Gdansk"
+ VICTORY_POINTS_362:0 "Danzig"
  VICTORY_POINTS_3320:0 "Wilno"
  VICTORY_POINTS_3392:0 "Brzesc Litewski"
  VICTORY_POINTS_3393:0 "Grodno"
