--- a/localisation/PB_Prussia_l_english.yml
+++ b/localisation/PB_Prussia_l_english.yml
@@ -10,6 +10,8 @@
 
   PB_Prussian_Caeser:0 "Der Berater"
 
+  PB_New_Romulus:0 "New Romulus"
+
   POLITICS_Philipp_Bouhler_DESC:0 "§YBorn:§!03/06/1896\n\n§YPhilipp Bouhler§! nicknamed the counsellor (§ODer Berater§!) has seen Prussia rise from the ashes as a rebirthed nation under Russian influence. A once simple farmboy turned solider during the great war he has seen the world at its quitest and loudest moments, serving in the Russian 3rd cavalry regiment. A regiment compromised of a Prussian majority that would soon turn against their forefathers in the Prussian war for independence during 1921. A war that proved successful in establishing a independent Prussia of sorts, heavily monitored by the Tsar's right hand.\n\nOriginally a fierce supporter of the democratic republic he soon saw through their antics and gained power through a bloody battle in Königsberg that lasted no longer than two days. Russia, meanwhile, looked with great interest towards Bouhler seeing him as a leader who aligned more towards their views and a possible proponent for a more Russian dominated Prussia. Secretly funding him and his Vaterland Front.\n\nFollowing the ideals of ultranationalism he advocates for a state incorporated by Pure Prussians though this "wish" would meet critism by his overlords and would usher in a new age of diplomatic strife between Europes two greatest powers. Germany and Russia. Nicknamed the §GGreat Game§!."
   
   Hermann_Hopker_Aschoff_DESC:0 "§YBorn:§!15/02/1878\n\n§YHermann Hopker Aschoff§! was a main proponent of the short lived §LPrussian§! Republic though once §ODer Berater§! and his troops started marching through Königsberg he kept a silent voice of protest. He should be dead by all means especially during the midnight massacres though it seems his name was rubbed off the hit lists for one reason or another. Thats assuming it was on there to begin with. Now he finds himself chancellor of the republic he dreamed §LPrussia§! of being and has already begin reconstructing the nation to fit his perfect view of Democracy."
@@ -153,7 +155,7 @@
   prussia21tooltip:0 "The effects of the §YStock Crisis§! will be further §GReduced§!.\n\n"
   prussia22tooltip:0 "The effects of the §YStock Crisis§! will be §GRemoved§!.\n\n"
   prussia23tooltip:0 "\nIf France agrees we will claim to be the true §ROrder§! of §gGermany§!!"
-
+  prussia24tooltip:0 "£decision_influence_small  The §CDanzig Conference§! will begin and various decisions must be made on Prussia's future and who will rule the Fatherland alongside Bouhler\n§W--------------§!\nThis will be done by a variety of £decision_icon_small  §YDecisions§! and §YEvents§!\n§W--------------§!\nThe options for our §YHead Of Government§! are:\n\n§YManteuffel§! -  £GFX_prod_eff_cap   Will set Prussia down a path of economic prosperity\n\n§YSchmidt§! -  £GFX_going_to_combat   Will crush the German menace at any cost\n\n§YHalder§! -  £GFX_manpower_texticon   Will expand the army and create a militaristic state\n\n§YBouhler§! -  £GFX_pol_power   Will promote the ideals of Neo-Imperalism"
  
   ##########################
   # EVENTS
@@ -262,5 +264,11 @@
   PRS_Hjalmar_Schacht:0 "Hjalmar Schacht"
   PRS_Hjalmar_Schacht_desc:0 "§YHjalmar Schacht§! is a renowned banker knowing all to well about what makes the wheels of industry turn."
   PRS_PB_Philipp_Bouhler:0 "Philipp Bouhler"
-  PRS_PB_Philipp_Bouhler_desc:0 "Der Berater is calm, intelligent, but most importantly, strong. He will lead the fractured Prussian state towards a §YGlorious Future§! or die trying. A farm boy, solider, general, nationalist idol, means there is no better man for the job that Mr Bouhler."
+  PRS_PB_Philipp_Bouhler_desc:0 "§YDer Berater§! is calm, intelligent, but most importantly, strong. He will lead the fractured Prussian state towards a §YGlorious Future§! or die trying. A farm boy, solider, general, nationalist idol, means there is no better man for the job than Mr Bouhler."
+  PRS_PB_Hasso_von_Manteuffel:0 "Hasso Von Manteuffel"
+  PRS_PB_Hasso_von_Manteuffel_desc:0 "§YHasso Von Manteuffel§! has his roots deeply seeded in economics. He has experience in foreign markets, trade, and business monopolies. His position in government will secure a prosporous future for Prussia no doubt and finally set the nation up to be an §CEconomic Power§!."
+  PRS_PB_Franz_Halder:0 "Franz Halder"
+  PRS_PB_Franz_Halder_desc:0 "A military man by nature, §YMr Halder§! seeks rapid expansion of the Prussian armed forces as well as a strict militaristic state. He has no concept of joining Germany or conquering it and sees §gPrussia§! as a seperate nation with is own unique identity and culture."
+  PRS_PB_August_Schmidt:0 "August Schmidt"
+  PRS_PB_August_Schmidt_desc:0 "§YAugust Schmidt§! is a radical indivdual, even by Neo-Imperialist standards. He seeks to cement §gPrussian§! rule over the German lands and counter the Austrian dominated Germany, even if it means allying with the Russians or French if needed. "
   PB_PRS_BOF:0 "Bofors"
