--- a/localisation/PB_Prussia_l_english.yml
+++ b/localisation/PB_Prussia_l_english.yml
@@ -81,27 +81,24 @@
   ##########################
   # DECISIONS
   ##########################
-
-  PB_PRS_Influence:0 "§GThe Great Game§!"
-  PB_PRS_Influence_desc:0 "The §LPrussian§! political sphere is one dominated by both §YGerman§! patriots and §CRussian§! loyalists. If Prussia is to ascend to a golden era they must play their cards correctly, choosing who is friend and who is foe. They could alternatively break bread between both powers and stay neutral advocating for a §LPrussian Prussia§! not a §YGerman§! or §CRussian§! one.\n\n\n\n\n\n£germany_icon §YGerman Influence§!: [?ger_i]\n\n\n                                                                                                                                                                           \n\n\n£russia_icon §CRussian Influence§!: [?rus_i]\n\n\n"
-  PRS_Influence_GER:0 "£decrease_reversed_texticon  Increase §YGerman§! Influence"
-  PRS_Influence_GER_desc:0 "We shall increase our diplomatic influence with §LPrussia§!"
-  PRS_Influence_RUS:0 "£decrease_reversed_texticon  Increase §CRussian§! Influence"
-  PRS_Influence_RUS_desc:0 "We shall increase our diplomatic influence with §LPrussia§!"
-  PRS_Influence_dec_RUS:0 "£decrease_texticon  Decrease §CRussian§! Influence"
-  PRS_Influence_dec_RUS_desc:0 "We shall decrease §CRussia's§! Political Influence"
-  PRS_Influence_dec_GER:0 "£decrease_texticon  Decrease §YGerman§! Influence"
-  PRS_Influence_dec_GER_desc:0 "We shall decrease §YGermany's§! Political Influence"
-  ger_high_inf:0 "§YGermany§! has an influence power of §O50+§! and §CRussia§! has an influence power of §O20-§!.\n\nA §YDecision§! £decision_icon_small will become available when the requirements are met.\n"
-  prs_no_inf:0 "§YGermany§! has an influence power of §O15-§! and §CRussia§! has an influence power of §O15-§!.\n\nA §YDecision§! £decision_icon_small will become available when the requirements are met.\n"
-  rus_high_inf:0 "§CRussia§! has an influence power of §O50+§! and §YGermany§! has an influence power of §O20-§!.\n\nA §YDecision§! £decision_icon_small will become available when the requirements are met.\n"
-  PRS_Influence_For_Prussia: "An Independent §LPrussia§!"
-  PRS_Influence_For_Prussia_desc: "We have had enough of both §YGermany's§! and §CRussia's§! antics."
-  PRS_Influence_For_Germany: "A §YGerman§! §LPrussia§!"
-  PRS_Influence_For_Germany_desc: "If Prussia is to survive through the modern world then our best bet is with §YGermany§!."
-  PRS_Influence_For_Russia:0 "A §CRussian§! §LPrussia§!"
-  PRS_Influence_For_Russia_desc:0 "If Prussia is to survive through the modern world then our best bet is with §CRussia§!."
+ 
   
+  PB_PRS_The_Prussian_State:0 "The Prussian State"
+  PRS_promote_the_nationalist_rhetoric:0 "Promote The Nationalist Rhetoric"
+  PRS_commend_local_heroes:0 "Commend Local Heroes"
+  PRS_propaganda_efforts:0 "Propaganda Efforts"
+  PRS_deals_with_krupp:0 "Deals With Krupp"
+  PRS_expand_rifle_production:0 "Expand Rifle Production"
+  PRS_purchase_arms:0 "Purchase Arms"
+  PRS_konigsberg_renovations_stage_one:0 "Königsberg Renovations '1'"
+  PRS_konigsberg_renovations_stage_two:0 "Königsberg Renovations '2'"
+  PRS_konigsberg_renovations_stage_three:0 "Königsberg Renovations '3'"
+  PRS_boost_moral:0 "Boost Morale"
+  PRS_religious_carnivals:0 "Religious Carnivals"
+  PRS_increase_production:0 "Increase Production"
+  PRS_new_designs:0 "New Designs"
+  PRS_trade_endeavours:0 "Trade Endeavours"
+
   ##########################
   # CORE STUFF
   ##########################
@@ -155,8 +152,16 @@
   prussia21tooltip:0 "The effects of the §YStock Crisis§! will be further §GReduced§!.\n\n"
   prussia22tooltip:0 "The effects of the §YStock Crisis§! will be §GRemoved§!.\n\n"
   prussia23tooltip:0 "\nIf France agrees we will claim to be the true §ROrder§! of §gGermany§!!"
-  prussia24tooltip:0 "£decision_influence_small  The §CDanzig Conference§! will begin and various decisions must be made on Prussia's future and who will rule the Fatherland alongside Bouhler\n§W--------------§!\nThis will be done by a variety of £decision_icon_small  §YDecisions§! and §YEvents§!\n§W--------------§!\nThe options for our §YHead Of Government§! are:\n\n§YManteuffel§! -  £GFX_prod_eff_cap   Will set Prussia down a path of economic prosperity\n\n§YSchmidt§! -  £GFX_going_to_combat   Will crush the German menace at any cost\n\n§YHalder§! -  £GFX_manpower_texticon   Will expand the army and create a militaristic state\n\n§YBouhler§! -  £GFX_pol_power   Will promote the ideals of Neo-Imperalism"
- 
+  prussia24tooltip:0 "£decision_influence_small  The §CDanzig Conference§! will begin and various decisions must be made on Prussia's future and who will rule the Fatherland alongside Bouhler\n§W--------------------------------------------------------------§!\nThis will be done through various §YEvents§!\n§W--------------------------------------------------------------§!\nThe options for our §YHead Of Government§! are:\n\n§YManteuffel§! -  £GFX_prod_eff_cap   Will set Prussia down a path of economic prosperity\n\n§YSchmidt§! -  £GFX_going_to_combat   Will crush the German menace at any cost\n\n§YHalder§! -  £GFX_manpower_texticon   Will expand the army and create a militaristic state\n\n§YBouhler§! -  £GFX_pol_power   Will promote the ideals of Neo-Imperalism\n§W--------------------------------------------------------------§!"
+  prussia25tooltip:0 "Bouhler will remain soul ruler of Prussia\n§W--------------------------------------------------------------§!\nNew £decision_icon_small '§YDecisions§!' will unlock for Bouhler\n§W--------------------------------------------------------------§!"
+  prussia26tooltip:0 "Manteuffel will rule coincide with Bouhler\n§W--------------------------------------------------------------§!\nNew £decision_icon_small  '§YDecisions§!' will unlock for Manteuffel\n§W--------------------------------------------------------------§!"
+  prussia27tooltip:0 "Halder will rule coincide with Bouhler\n§W--------------------------------------------------------------§!\nNew £decision_icon_small  '§YDecisions§!' will unlock for Halder\n§W--------------------------------------------------------------§!"
+  prussia28tooltip:0 "Schimdt will rule coincide with Bouhler\n§W--------------------------------------------------------------§!\nNew £decision_icon_small  '§YDecisions§!' will unlock for Schimdt\n§W--------------------------------------------------------------§!"
+  prussia29tooltip:0 "§W--------------------------------------------------------------§!\nPrussia will review its current internal issues based around day-to-day life"
+  prussia30tooltip:0 "§W--------------------------------------------------------------§!\nPrussia will review its current internal issues based around the military"
+  prussia31tooltip:0 "§W--------------------------------------------------------------§!\nPrussia will review its current internal issues based around culture"
+  prussia32tooltip:0 "§W--------------------------------------------------------------§!\nPrussia will review its current internal issues based around the junkers"
+  prussia33tooltip:0 "§W--------------------------------------------------------------§!\nPrussia will review its current internal issues based around politics"
   ##########################
   # EVENTS
   ##########################
@@ -167,6 +172,71 @@
   prussia2title:0 "Surrounded And Terrified"
   prussia2desc:0 "Prussia nervously nibbles its nails away in utter fear of its abusive parents. Both mother and father at any moment could whip out the belt and hand it a solid thrashing if they so pleased, with little repercussion. A child who has witnessed the worst of their anger and is ultimately defenceless when targeted. Today though the pain ends, all the suffering, abuse, trauma. Prussia will have its revenge and my god will it be bloody and merciless." 
   prussia2opta:0 "We Must Secure Our Independence"
+  prussia3title:0 "The Principled Hand"
+  prussia3desc:0 "" 
+  prussia3opta:0 "The Best Choice, Clearly"
+  prussia4title:0 "The Strong Hand"
+  prussia4desc:0 "" 
+  prussia4opta:0 "The Best Choice, Clearly"
+  prussia5title:0 "The Righteous Hand"
+  prussia5desc:0 "" 
+  prussia5opta:0 "The Best Choice, Clearly"
+  prussia6title:0 "The Feared Hand"
+  prussia6desc:0 "" 
+  prussia6opta:0 "The Best Choice, Clearly"
+  prussia7title:0 "The Danzig Conference"
+  prussia7desc:0 "With Prussian independece threatened Bouhler has decided to combine the nations brightests minds to come to a conclusion on the nations survival and how it will act in the coming years. Internal and external issues are mounting and Bouhler has to make the right calls on certain decisions. Not only does the nations survival depend on the conference but so does it's legacy.\n\nToday is the beginning but tomorrow could surely be the end." 
+  prussia7opta:0 "Lets See Where This Goes"
+  prussia8title:0 "A World Of Economics"
+  prussia8desc:0 "The first topic and the most important of all was economics and how the Prussian state would continue to develop its European standing through commerce. A fierce battle between politicians and suits ensued in the conference room and many believed to harbour the right answer for such a question. Nationalists, bureaucrats, and militarists all promised efficency and prosperity but the real question was who was telling the truth.\n\nOnly time could tell." 
+  prussia8opta:0 "Promote Capitalism And Big Business"
+  prussia8optb:0 "Local Markets Are Preferable"
+  prussia8optc:0 "Government Owned And Funded"
+  prussia9title:0 "A World Of Customs"
+  prussia9desc:0 "Second on the discussion list was the ethnicity issue within Prussia, a hot topic that birthed radical opinions and radical suggestions. Most of the conference bloc was pro-unity, even those in the Vaterland Front but many still spoke about the negative effects of cultral mixing pointing at the Roman Empire as an example. Those who had stayed neutral on the topic wished to please both parties but unfortunately today that wasn't an option.\n\nWhen Bouhler presented himself behind the poduim he pronounced only one word." 
+  prussia9opta:0 "Unity!"
+  prussia9optb:0 "Purity!"
+  prussia10title:0 "A World Of Politics"
+  prussia10desc:0 "The third topic and the most important politicaly speaking was the issue of the militarists. The only party to counter the Vaterland front since the days of the Prussian republic. Many who work for the Militarists unsurprisingly share connections with the army and, as Der Berater puts it, "They are old men who still believe in old traditions". They have continued to exist as a sort of fake opposition to the Vaterland front but still hold some significant political sway.\n\nToday we must decide what the outcome will be of these despots." 
+  prussia10opta:0 "Cooperation Is Best"
+  prussia10optb:0 "There Will Be One Party Only"
+  prussia11title:0 "A World Of War"
+  prussia11desc:0 "The final topic was the Prussian military. The ideas of war came into violent fruition during the various speeches that were given and even those who shared no previous military background decided to chime in. A divide between basing the army on traditional infantry and artillery builds and the new mechanized beasts known as "Landships" made an abrupptive introduction. Bouhler had to calm the situation down which as this point developed into a show of yelling and insults.\n\nThe nation's survival depends on correct choices, mistakes are not an option." 
+  prussia11opta:0 "Go With The Steel Beasts"
+  prussia11optb:0 "Stay True To Our Roots"
+  prussia12title:0 "A World Of Leaders"
+  prussia12desc:0 "With the conference now concluded Bouhler has been tasked with consolidating the nation and setting its course towards the future. Whilst he is able the work needed is immeasurable and assistance would prove benefitial both short and long term. Some top ranking Vaterland officials have reccomended estabilishing a head of government to aid Bouhler with his ambitions. Of course these officials have their own political wishes but who said anything was free in life?" 
+  prussia12opta:0 "Bouhler Needs No Help"
+  prussia12optb:0 "What Are Our Options"
+  prussia13title:0 "The Candidates"
+  prussia13desc:0 "The candidates are as follows:\n\n§YHasso Von Manteuffel§! has his roots deeply seeded in economics. He has experience in foreign markets, trade, and business monopolies. His position in government will secure a prosporous future for Prussia no doubt and finally set the nation up to be an economic power.\n\nA military man by nature, §YMr Halder§! seeks rapid expansion of the Prussian armed forces as well as a strict militaristic state. He has no concept of joining Germany or conquering it and sees Prussia as a seperate nation with is own unique identity and culture.\n\n§YAugust Schmidt§! is a radical indivdual, even by Neo-Imperialist standards. He seeks to cement Prussian rule over the German lands and counter the Austrian dominated Germany, even if it means allying with the Russians or French if needed." 
+  prussia13opta:0 "Go With Halder"
+  prussia13optb:0 "Go With Schmidt"
+  prussia13optc:0 "Go With Manteuffel"
+  prussia14title:0 "Issues Of Culture"
+  prussia14desc:0 "" 
+  prussia14opta:0 "Time To Act"
+  prussia15title:0 "Issues Of The Military"
+  prussia15desc:0 "" 
+  prussia15opta:0 "Time To Act"
+  prussia16title:0 "Issues Of The State"
+  prussia16desc:0 "" 
+  prussia16opta:0 "Time To Act"
+  prussia17title:0 "Issues Of The Junkers"
+  prussia17desc:0 "" 
+  prussia17opta:0 "Time To Act"
+  prussia18title:0 "Issues Of Society"
+  prussia18desc:0 "" 
+  prussia18opta:0 "Time To Act"
+  prussia19title:0 "A New National Flag?"
+  prussia19desc:0 "With the state experiencing swift and measurable changes the topic of the national flag has been brought to Bouhler's attention. The current flag shares too many similarities with the old republic and some have requested a change to fit with the current administration." 
+  prussia19opta:0 "There Will Be No Changes"
+  prussia19optb:0 "What Are Our Options"
+  prussia20title:0 "Our Options"
+  prussia20desc:0 "Our current options for flags are as follows:\n\nThe State Ensign flag commonly used on maratime vessels.\n\nThe Baltic Prussian flag used to represent our shared ancestry and origins with the baltic peoples.\n\nAnd the Imperial Prussian Flag used frequently within the military and some government buidlings.\n\nSo what will it be Der Berater?" 
+  prussia20opta:0 "The State Ensign Flag"
+  prussia20optb:0 "The Baltic Prussian Flag"
+  prussia20optc:0 "The Imperial Prussian Flag"
 
   ##########################
   # FOCUS
@@ -270,5 +340,6 @@
   PRS_PB_Franz_Halder:0 "Franz Halder"
   PRS_PB_Franz_Halder_desc:0 "A military man by nature, §YMr Halder§! seeks rapid expansion of the Prussian armed forces as well as a strict militaristic state. He has no concept of joining Germany or conquering it and sees §gPrussia§! as a seperate nation with is own unique identity and culture."
   PRS_PB_August_Schmidt:0 "August Schmidt"
-  PRS_PB_August_Schmidt_desc:0 "§YAugust Schmidt§! is a radical indivdual, even by Neo-Imperialist standards. He seeks to cement §gPrussian§! rule over the German lands and counter the Austrian dominated Germany, even if it means allying with the Russians or French if needed. "
+  PRS_PB_August_Schmidt_desc:0 "§YAugust Schmidt§! is a radical indivdual, even by Neo-Imperialist standards. He seeks to cement §gPrussian§! rule over the German lands and counter the Austrian dominated Germany, even if it means allying with the Russians or French if needed."
   PB_PRS_BOF:0 "Bofors"
+  PB_PRS_BOF_desc:0 "§YBofors§! is an Anglo-Swedish arms manufacturer specializing in mainly artillery though not limited to it."
