--- a/localisation/PB_Prussia_l_english.yml
+++ b/localisation/PB_Prussia_l_english.yml
@@ -59,25 +59,11 @@
   PB_PRS_Neutral2_desc:0 "We are slaves to no Empire, no Germans, no Russians. We are slaves for only ourselves."
   PB_PRS_Pure:0 "The Pure Prussian"
   PB_PRS_Young:0 "Teaching The Young"
-  PB_PRS_Military:0 "For The State"
-  PB_PRS_Industry: "For The People"
-  PB_PRS_Germany:0 "A German Prussia"
-  PB_PRS_Germany_desc:0 "Not only do both Prussia and Germany share common values but we have had a long history of united peoples. We shall continue this endevour for the betterment of the Germanic race."
-  PB_PRS_Freedom_Of_Movement:0 "Freedom Of Movement"
-  PB_PRS_Freedom_Of_Movement_desc:0 "There is unrestricted movement between the German peoples."
-  PB_PRS_New_Markets:0 "New Markets"
-  PB_PRS_Krupp:0 "Investments From Krupp"
-  PB_PRS_GER_eco:0 "German Dominance Over Prussian Industry"
-  PB_PRS_GER_eco2:0 "German Dominance Over Prussian Industry"
-  PB_PRS_Russia:0 "A Russian Prussia"
-  PB_PRS_stock_crisis:0 "London Stock Crisis"
-  PB_PRS_stock_crisis2:0 "London Stock Crisis"
-  PB_PRS_stock_crisis3:0 "London Stock Crisis"
-  PB_PRS_total_recovery:0 "Total Recovery"  
-  PB_PRS_gas_attack:0 "Gas Attacks"
-  PB_PRS_Tank:0 "Steel Calvary"
-  PB_PRS_Tank2:0 "Steel Calvary"
-  PB_PRS_Tank3:0 "Steel Calvary"
+  PB_PRS_Military:0 "An Army With A State"
+  PB_PRS_Military2:0 "An Army With A State"
+  PB_PRS_Hunt_The_Disloyal:0 "Hunt The Disloyal"
+  PB_PRS_Reap_The_Rewards:0 "Reap The Rewards"
+
   ##########################
   # DECISIONS
   ##########################
@@ -162,6 +148,7 @@
   prussia31tooltip:0 "§W--------------------------------------------------------------§!\nPrussia will review its current internal issues based around culture"
   prussia32tooltip:0 "§W--------------------------------------------------------------§!\nPrussia will review its current internal issues based around the junkers"
   prussia33tooltip:0 "§W--------------------------------------------------------------§!\nPrussia will review its current internal issues based around politics"
+  prussia34tooltip:0 "Prussia has resloved its first roadblocks, removing each issue with perfect precision and paving the way to build onto the Vaterlands core focuses:\n§W--------------------------------------------------------------§!\n  §PSTRENGTH§!                  §PSTATE§!                  §PFAMILY§!\n§W--------------------------------------------------------------§!"
   ##########################
   # EVENTS
   ##########################
@@ -237,6 +224,10 @@
   prussia20opta:0 "The State Ensign Flag"
   prussia20optb:0 "The Baltic Prussian Flag"
   prussia20optc:0 "The Imperial Prussian Flag"
+  prussia21title:0 "The Next Steps"
+  prussia21desc:0 "" 
+  prussia21opta:0 "To Purge Dissidence"
+
 
   ##########################
   # FOCUS
