davis election tree skeleton is complete + hopefully last time i have to edit the stock crisis event file to add an exception to America's national spirit so it isnt timed

--- a/localisation/PB_United_Commonwealth_l_english.yml
+++ b/localisation/PB_United_Commonwealth_l_english.yml
@@ -161,6 +161,40 @@ AME_imperial_powerhouse_desc:0 ""
 
 AME_davis_holds_on:0 "Davis Holds On"
 AME_davis_holds_on_desc:0 ""
+AME_steady_as_she_goes:0 "Steady as She Goes"
+AME_steady_as_she_goes_desc:0 ""
+AME_placate_southern_segregationists:0 "Placate Southern Segregationists"
+AME_placate_southern_segregationists_desc:0 ""
+AME_placate_radical_abolitionists:0 "Placate Radical Abolitionists"
+AME_placate_radical_abolitionists_desc:0 ""
+AME_a_problem_for_the_future:0 "A Problem for the Future"
+AME_a_problem_for_the_future_desc:0 ""
+AME_more_than_just_empty_promises:0 "More than just Empty Promises"
+AME_more_than_just_empty_promises_desc:0 ""
+AME_the_year_gag_law:0 "The [GetYear] Gag Law"
+AME_the_year_gag_law_desc:0 ""
+AME_pass_token_legislation:0 "Pass Token Legislation"
+AME_pass_token_legislation_desc:0 ""
+AME_matters_of_the_economy:0 "Matters of the Economy"
+AME_matters_of_the_economy_desc:0 ""
+AME_further_relief_from_the_crisis:0 "Further Relief from the Crisis"
+AME_further_relief_from_the_crisis_desc:0 ""
+AME_stop_further_relief_efforts:0 "Stop Further Relief Efforts"
+AME_stop_further_relief_efforts_desc:0 ""
+AME_lessons_from_london:0 "Lessons from London"
+AME_lessons_from_london_desc:0 ""
+AME_double_down_on_our_duties:0 "Double Down on our Duties"
+AME_double_down_on_our_duties_desc:0 ""
+AME_promote_the_self_sufficient_model:0 "Promote the Self-Sufficient Model"
+AME_promote_the_self_sufficient_model_desc:0 ""
+AME_expand_our_military_industry:0 "Expand our Military Industry"
+AME_expand_our_military_industry_desc:0 ""
+AME_the_army_prevails:0 "The Army Prevails"
+AME_the_army_prevails_desc:0 ""
+AME_the_navy_pulls_through:0 "The Navy Pulls Through"
+AME_the_navy_pulls_through_desc:0 ""
+
+
 
 AME_the_aberhart_administration:0 "The Aberhart Administration"
 AME_the_aberhard_administration_desc:0 ""
