--- a/localisation/PB_Prussia_l_english.yml
+++ b/localisation/PB_Prussia_l_english.yml
@@ -75,7 +75,7 @@
  
   
   PB_PRS_The_Prussian_State:0 "The Prussian State"
-  PB_PRS_The_Prussian_State_desc:0 "The stars tell a story of warrior who was cheated of his birthright. Stabbed in the back for a mistake he never made. But instead of kneeing to defeat he endured, pushed on, and reclaimed what was rightfully his. That star is us.\n\nWe certainly aren't a major power nor have we ever procalimed to be. We are Prussian though, that use to mean something. These days the word Prussian is associated with failure and misery. Tomorrow though everyone will wish they were Prussian."
+  PB_PRS_The_Prussian_State_desc:0 "\n\n\n\n\n\nThe stars tell a story of warrior who was cheated of his birthright. Stabbed in the back for a mistake he never made. But instead of kneeing to defeat he endured, pushed on, and reclaimed what was rightfully his. That star is us.\n\nWe certainly aren't a major power nor have we ever procalimed to be. We are Prussian though, that use to mean something. These days the word Prussian is associated with failure and misery. Tomorrow though everyone will wish they were Prussian."
   PRS_promote_the_nationalist_rhetoric:0 "Promote The Nationalist Rhetoric"
   PRS_commend_local_heroes:0 "Commend Local Heroes"
   PRS_propaganda_efforts:0 "Propaganda Efforts"
@@ -266,7 +266,10 @@
   prussia28opta:0 "He Fucking Did It"
   prussia29title:0 "Fresh Paint"
   prussia29desc:0 "The streets are clean. The roads lay freshly paved. The windows twinkle a bright white. And not a speck of dust can be seen in a thousand miles. We have a new home, a rejuvenated capital. One that we plan on taking care of till the end of time." 
-  prussia29opta:0 "Europe Is Jealous"
+  prussia29opta:0 "Europe Is Jealous" 
+  prussia30title:0 "The Mobolization Plan"
+  prussia30desc:0 "" 
+  prussia30opta:0 "Remember, Quality Over Quantity"
 
 
   ##########################
@@ -399,3 +402,8 @@
   PRS_PB_August_Schmidt_desc:0 "§YAugust Schmidt§! is a radical indivdual, even by Neo-Imperialist standards. He seeks to cement §gPrussian§! rule over the German lands and counter the Austrian dominated Germany, even if it means allying with the Russians or French if needed."
   PB_PRS_BOF:0 "Bofors"
   PB_PRS_BOF_desc:0 "§YBofors§! is an Anglo-Swedish arms manufacturer specializing in mainly artillery though not limited to it."
+  PRS_Albert_Speer:0 "Albert Speer"
+  PRS_Albert_Speer_desc:0 "§YAlbert Speer§! is a German by birth but during his life he sought close connections to the newly independent Prussia. Slowly drifting towards the nation and becoming intrigued by its unique form of radicalism and thus finding himself a position on the "§YHigh Table§!""
+  PRS_Kurt_Schmitt:0 "Kurt Schmitt"
+  PRS_Arthur_Seyss:0 "Arthur Seyss"
+  PRS_Joachim_Von_Ribbentrop:0 "Joachim Von Ribbentrop"
